--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,8 +1,6 @@
 name: 'Economia Popular -  Combustiveis'
 on:
   push:
-  pull_request:
-    types: [ opened, reopened ]
 jobs:
   build-docker-artifacts:
     runs-on: ubuntu-latest
@@ -10,17 +8,18 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Docker Build
-        run: docker build -t app:latest .
-
-      - name: Docker Tag Latest
-        run: docker tag app:latest 181560427716.dkr.ecr.us-east-1.amazonaws.com/economia-popular/indices-combustiveis:latest
-
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
         with:
-          registry-type: public        
+          registry-type: public   
+          aws-region: us-east-1      
+
+      - name: Docker Build
+        run: docker build -t app:latest .
+
+      - name: Docker Tag Latest
+        run: docker tag app:latest 181560427716.dkr.ecr.us-east-1.amazonaws.com/economia-popular/indices-combustiveis:latest     
 
       - name: Docker Push Latest
         run: docker push 181560427716.dkr.ecr.us-east-1.amazonaws.com/economia-popular/indices-combustiveis:latest
